--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,22 +34,20 @@
             <div class="collapse navbar-collapse" id="tnavbar">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="/" title="Home" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-home"></span> Inicio</a>
-                    </li>
-                    <li>
-                        <a href="/products" title="Productos" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-cutlery"></span> Niveles</a>
+                        <a href="/" title="Inicio" class="btn btn-xs btn-default"> Inicio</a>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Niveles
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Page 1-1</a></li>
-                            <li><a href="#">Page 1-2</a></li>
-                            <li><a href="#">Page 1-3</a></li>
+                            <li><a href="/niveles/azul.html">Bloque Azúl</a></li>
+                            <li><a href="/niveles/morado.hmtl">Bloque Morado</a></li>
+                            <li><a href="/niveles/verde.html">Bloque Verde</a></li>
+                            <li><a href="/niveles/cafe.html">Bloque Cafe</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-info-sign"></span> ¿Quiénes Somos?</a>
+                        <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
                     </li>
                 </ul>
             </div>
