--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,9 @@
                     <li>
                         <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
                     </li>
+                                        <li>
+                        <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
+                    </li>
                 </ul>
             </div>
         </div>
