--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
+                        <a href="/form" title="Primer Ingreso" class="btn btn-xs btn-default"> Primer Ingreso</a>
                     </li>
                                         <li>
                         <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
