--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,42 +20,34 @@
     <script src="/js/jquery-3.2.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </head>
-<body>
-    <nav class="navbar navbar-default" role="navigation" id="main-navigation">
-        <div class="container">
-            <div class="">
-                <!--Logo de plex con hiperlink-->
-            </div>
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#tnavbar">
-                <span class="sr-only">Toggle navigation</span><i class="fa fa-bars"></i>
-            </button>
-            </div>
-            <div class="collapse navbar-collapse" id="tnavbar">
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/" title="Inicio" class="btn btn-xs btn-default"> Inicio</a>
-                    </li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Niveles
-                            <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/niveles/azul.html">Bloque Azúl</a></li>
-                            <li><a href="/niveles/morado.hmtl">Bloque Morado</a></li>
-                            <li><a href="/niveles/verde.html">Bloque Verde</a></li>
-                            <li><a href="/niveles/cafe.html">Bloque Cafe</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="/form" title="Primer Ingreso" class="btn btn-xs btn-default"> Primer Ingreso</a>
-                    </li>
-                                        <li>
-                        <a href="/about" title="¿Quienes somos?" class="btn btn-xs btn-default"> ¿Quiénes Somos?</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+      </button>
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li><a href="#section1">Section 1</a></li>
+          <li><a href="#section2">Section 2</a></li>
+          <li><a href="#section3">Section 3</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="#section41">Section 4-1</a></li>
+              <li><a href="#section42">Section 4-2</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
     {{ content }}
     <footer class="footer">
