--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,18 +29,23 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">PLEX</a>
     </div>
     <div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li><a href="#section1">Section 1</a></li>
-          <li><a href="#section2">Section 2</a></li>
-          <li><a href="#section3">Section 3</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Section 4 <span class="caret"></span></a>
+          <li><a href="#section1">Introuducción</a></li>
+          <li><a href="#section2">¿Quienes somos?</a></li>
+          <li><a href="#section3">Niveles</a></li>
+          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#section41">Section 4-1</a></li>
-              <li><a href="#section42">Section 4-2</a></li>
+              <li><a href="#section41">Bloque Azul (1-3)</a></li>
+              <li><a href="#section42">Bloque Morado (4-6)</a></li>
+              <li><a href="#section43">Bloque Verde (7-9)</a></li>
+              <li><a href="#section44">Bloque Cafe (10-12)</a></li>
+          <li><a href="#section5">Inscripción</a></li>
+          <li><a href="#section6">Contacto</a></li>
+
             </ul>
           </li>
         </ul>
