--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="referrer" content="origin">
-  <title>{{page.title}} - PLEX</title>
+  <title>{{page.title}}</title>
   {% seo title=false %}
   <meta name="HandheldFriendly" content="True" />
-  <meta name="theme-color" content="#ec9611">
-  <meta name="msapplication-navbutton-color" content="#ec9611">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#ec9611">
+  <meta name="theme-color" content="#5f9ea0">
+  <meta name="msapplication-navbutton-color" content="#5f9ea0">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#5f9ea0">
   <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=IM+Fell+English" rel="stylesheet" type="text/css">
