--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,14 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-      </button>
+          <i class="fa fa-bars"></i>                   
+        </button>
         <a class="navbar-brand" href="#">PLEX</a>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#section1">Introuducción</a></li>
+            <li><a href="#section1">Introducción</a></li>
             <li><a href="#section2">¿Quienes somos?</a></li>
             <li><a href="#section3">Niveles</a></li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
