--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,19 +33,19 @@
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="#section1">Introducción</a></li>
-            <li><a href="#section2">¿Quienes somos?</a></li>
-            <li><a href="#section3">Niveles</a></li>
+            <li><a href="#Home" class="block">Introducción</a></li>
+            <li><a href="#AboutUs" class="block">¿Quienes somos?</a></li>
+            <li><a href="#Levels" class="block">Niveles</a></li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#section41">Bloque Azul (1-3)</a></li>
-                <li><a href="#section42">Bloque Morado (4-6)</a></li>
-                <li><a href="#section43">Bloque Verde (7-9)</a></li>
-                <li><a href="#section44">Bloque Cafe (10-12)</a></li>
+                <li><a href="#Blue" class="block">Bloque Azul (1-3)</a></li>
+                <li><a href="#Purple" class="block">Bloque Morado (4-6)</a></li>
+                <li><a href="#Green" class="block">Bloque Verde (7-9)</a></li>
+                <li><a href="#Brown" class="block">Bloque Cafe (10-12)</a></li>
               </ul>
             </li>
-            <li><a href="#section5">Inscripción</a></li>
-            <li><a href="#section6">Contacto</a></li>
+            <li><a href="#Inscription">Inscripción</a></li>
+            <li><a href="#ContactUs">Contacto</a></li>
 
           </ul>
           </li>
