--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <i class="fa fa-bars"></i>                   
         </button>
-        <a class="navbar-brand" href="#">PLEX</a>
+        <a class="navbar-brand" href="#"><img src="/assets/backgrounds/plex2.png"></a>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
