Adding logo fix 1.1

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,16 @@
   <nav class="navbar navstyle navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
+        <img src="/assets/backgrounds/plex2.png">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <i class="fa fa-bars"></i>                   
         </button>
-        <a class="navbar-brand" href="#"><img src="/assets/backgrounds/plex2.png"></a>
+        <a class="navbar-brand"></a>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
+            <li><a href="/" class="block"><img src="/assets/backgrounds/plex2.png"></a></li>
             <li><a href="#Home" class="block">Introducción</a></li>
             <li><a href="#AboutUs" class="block">¿Quienes somos?</a></li>
             <li><a href="#Levels" class="block">Niveles</a></li>
