--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
   <nav class="navbar navstyle navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
-        <img src="/assets/backgrounds/plex2.png">
+        <img src="/assets/backgrounds/plex2.png" class="smalllogo hidden-sm hidden-md hidden-lg">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
           <i class="fa fa-bars"></i>                   
         </button>
@@ -34,16 +34,16 @@
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="/" class="block"><img src="/assets/backgrounds/plex2.png"></a></li>
-            <li><a href="#Home" class="block">Introducción</a></li>
-            <li><a href="#AboutUs" class="block">¿Quienes somos?</a></li>
-            <li><a href="#Levels" class="block">Niveles</a></li>
+            <li><a href="/" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo"></a></li>
+            <li><a href="#Home" class="tab">Introducción</a></li>
+            <li><a href="#AboutUs" class="tab">¿Quienes somos?</a></li>
+            <li><a href="#Levels" class="tab">Niveles</a></li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#Blue" class="block">Bloque Azul (1-3)</a></li>
-                <li><a href="#Purple" class="block">Bloque Morado (4-6)</a></li>
-                <li><a href="#Green" class="block">Bloque Verde (7-9)</a></li>
-                <li><a href="#Brown" class="block">Bloque Cafe (10-12)</a></li>
+                <li><a href="#Blue" class="tab">Bloque Azul (1-3)</a></li>
+                <li><a href="#Purple" class="tab">Bloque Morado (4-6)</a></li>
+                <li><a href="#Green" class="tab">Bloque Verde (7-9)</a></li>
+                <li><a href="#Brown" class="tab">Bloque Cafe (10-12)</a></li>
               </ul>
             </li>
             <li><a href="#Inscription">Inscripción</a></li>
