Changing navbar colors and resizing

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,11 +34,11 @@
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="/" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo"></a></li>
+            <li><a href="/" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo hidden-xs hidden-sm"></a></li>
             <li><a href="#Home" class="tab">Introducción</a></li>
             <li><a href="#AboutUs" class="tab">¿Quienes somos?</a></li>
             <li><a href="#Levels" class="tab">Niveles</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
+            <li class="dropdown"><a class="dropdown-toggle tab" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="#Blue" class="tab">Bloque Azul (1-3)</a></li>
                 <li><a href="#Purple" class="tab">Bloque Morado (4-6)</a></li>
@@ -46,8 +46,8 @@
                 <li><a href="#Brown" class="tab">Bloque Cafe (10-12)</a></li>
               </ul>
             </li>
-            <li><a href="#Inscription">Inscripción</a></li>
-            <li><a href="#ContactUs">Contacto</a></li>
+            <li><a href="#Inscription" class="tab">Inscripción</a></li>
+            <li><a href="#ContactUs" class="tab">Contacto</a></li>
 
           </ul>
           </li>
@@ -61,8 +61,6 @@
   <footer class="footer">
     <div class="container">
       <div class="row">
-        <div class="col-md-7">
-          <p><a href="https://sciencefornourishment.github.io/">PLEX - Programa de Lengua Extranjera</a> &copy; 2017<br/> Powered
         </div>
       </div>
     </div>
