--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,9 +8,9 @@
   <title>{{page.title}}</title>
   {% seo title=false %}
   <meta name="HandheldFriendly" content="True" />
-  <meta name="theme-color" content="#5f9ea0">
-  <meta name="msapplication-navbutton-color" content="#5f9ea0">
-  <meta name="apple-mobile-web-app-status-bar-style" content="#5f9ea0">
+  <meta name="theme-color" content="whitesmoke">
+  <meta name="msapplication-navbutton-color" content="whitesmoke">
+  <meta name="apple-mobile-web-app-status-bar-style" content="whitesmoke">
   <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/all.css" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=IM+Fell+English" rel="stylesheet" type="text/css">
@@ -37,13 +37,13 @@
             <li><a href="/" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo hidden-xs hidden-sm"></a></li>
             <li><a href="#Home" class="tab">Introducción</a></li>
             <li><a href="#AboutUs" class="tab">¿Quienes somos?</a></li>
-            <li><a href="#Levels" class="tab">Niveles</a></li>
-            <li class="dropdown"><a class="dropdown-toggle tab" data-toggle="dropdown" href="#">Bloques <span class="caret"></span></a>
+            <li><a href="#Levels" class="tab">Bloques</a></li>
+            <li class="dropdown"><a class="dropdown-toggle tab" data-toggle="dropdown" href="#">Niveles <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="#Blue" class="tab">Bloque Azul (1-3)</a></li>
-                <li><a href="#Purple" class="tab">Bloque Morado (4-6)</a></li>
-                <li><a href="#Green" class="tab">Bloque Verde (7-9)</a></li>
-                <li><a href="#Brown" class="tab">Bloque Cafe (10-12)</a></li>
+                <li><a href="#A1" class="tab">Inicial (1-3)</a></li>
+                <li><a href="#A2" class="tab">Intermedio (4-6)</a></li>
+                <li><a href="#B1" class="tab">Intermedio Avanzado (7-9)</a></li>
+                <li><a href="#B2" class="tab">Avanzado (10-12)</a></li>
               </ul>
             </li>
             <li><a href="#Inscription" class="tab">Inscripción</a></li>
