Delete Intro tab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,8 +34,8 @@
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
-            <li><a href="/" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo hidden-xs hidden-sm"></a></li>
-            <li><a href="#Home" class="tab">Introducción</a></li>
+            <li><a href="#Home" class="tab"><img src="/assets/backgrounds/plex2.png" class="biglogo hidden-xs hidden-sm"></a></li>
+            <li><a href="#Home" class="tab hidden-md hidden-lg">Introducción</a></li>
             <li><a href="#AboutUs" class="tab">¿Quienes somos?</a></li>
             <li><a href="#Levels" class="tab">Bloques</a></li>
             <li class="dropdown"><a class="dropdown-toggle tab" data-toggle="dropdown" href="#">Niveles <span class="caret"></span></a>
